--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,11 +20,10 @@ docs_dir: 'content'
 
 # Top level headings become tabs at the top due to `tabs: true` in the theme.
 nav:
-  - Get Started:
+  - Introduction:
       - '': index.md
-  - Whitepaper:
-      - Whitepaper (EN): whitepaper/index.md
-      - Whitepaper (CN): whitepaper/chinese.md
+  - Whitepapers:
+      - '': whitepapers/index.md
   - Community:
       - '': community/index.md
   - Products:
