--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,16 +18,11 @@ docs_dir: 'content'
 
 # Top level headings become tabs at the top due to `tabs: true` in the theme.
 nav:
-  - Introduction:
-      - '': index.md
-  - Whitepapers:
-      - '': whitepapers/index.md
-  - Community:
-      - '': community/index.md
-  - Products:
-      - '': products/index.md
-  - FAQs:
-      - '': faqs.md
+  - Introduction: index.md
+  - Whitepapers: whitepapers/index.md
+  - Community: community/index.md
+  - Products: products/index.md
+  - FAQs: faqs.md
  
 # These social links will be rendered as icons in the footer, as long as the type corresponds to FontAwesome glyph.
 extra:
